[gd_scene load_steps=6 format=2]

[ext_resource path="res://main/main.gd" type="Script" id=1]
[ext_resource path="res://ui/health_ui.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sound/sky_fire_title_screen.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/ui_accept.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sound/rain_of_lasers_main.ogg" type="AudioStream" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Levels" type="Node2D" parent="."]

[node name="Menus" type="CanvasLayer" parent="."]

[node name="IntroTween" type="Tween" parent="."]

[node name="Intro" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Intro"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUI" parent="." instance=ExtResource( 2 )]

[node name="TitleScreenMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -2.0

[node name="AcceptMenuSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 5.0

[node name="MainMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
volume_db = -80.0
